--- a/Index.html
+++ b/Index.html
@@ -3,10 +3,10 @@
 <HEAD>
 <TITLE>Home page</TITLE>
   <STYLE>
-BODY (BACKGROUND-COLOR: #EEFFEE; COLOR: RED; }
-HR(BACKGROUND-COLOR:RED; HEIGHT:2PX;}
-H3(COLOR: RED; TEXT-ALIGN: CENTER; }
-P(FONT-SIZE:20PX;}
+BODY {BACKGROUND-COLOR: #EEFFEE; COLOR: RED; }
+HR{BACKGROUND-COLOR:RED; HEIGHT:2PX;}
+H3{COLOR: RED; TEXT-ALIGN: CENTER; }
+P{ONT-SIZE:20PX;}
 </STYLE>
 </HEAD>
 <BODY>
